Finished actors (eng + srb) and updated preview text

--- a/html_actors/arnold-schwarzenegger-sr.html
+++ b/html_actors/arnold-schwarzenegger-sr.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Arnold Schwarzenegger</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +33,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
+        <a href="arnold-schwarzenegger.html" id="language" class="ml-auto mr-1">
             <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
             <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
         </a>
@@ -106,7 +106,7 @@
                         <li class="breadcrumb-item">
                             <a href="../glumci.html">Glumci</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Arnold Schwarzenegger</li>
                     </ol>
                 </nav>
 
@@ -119,33 +119,30 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Arnold_Schwarzenegger.jpg" alt="Arnold Schwarzenegger" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <b> Ime i prezime: </b> Arnold Schwarzenegger
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Datum rođenja: </b> Jul 30, 1947 (age 70)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> Mesto rođenja: </b> Tal, Stirija, Austrija
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Aktivno glumi: </b> 1970 - sada
                         <br/>
                         <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+                        <a href="../html_films/terminator-sr.html">Terminator</a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
                         <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
+                        <p>AArnold Alois Schvarzenegger (/ ʃvɑːrtsənɛɡər /; [1] [aɐnɔlt ʃvaɐtsnˌʔɛɡɐ], rođen 30. jula 1947. godine) je austrijsko-američki glumac, filmadžer, biznismen, investitor, autor, filantrop, aktivista, političar i bivši profesionalni bodibuilder. Od 2003. do 2011. godine služio je dva mandata kao 38. guverner Kalifornije.
 						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
-						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
-						</p>
+						<p>Švarceneger je počeo trening na treningu u dobi od 15 godina. Osvojio je titulu gosp. Universe u 20-im godinama i osvojio sedmično takmičenje g-dina Olimpia, ostajući istaknuto prisustvo u bodibildingu i pisanju mnogih knjiga i članaka o sportu. Sportski festival Arnold, koji se smatrao jednom od najboljih profesionalnih takmičenja za bodibilding u poslednjih nekoliko godina, dobio je ime po njemu. Široko se smatra da je jedan od najvećih bodibildera svih vremena, kao i naj harizmatičniji ambasador sporta. [2]</p>
+						<p>
+						Švarceneger je postao svetska slava kao holivudska ikona akcionog filma. Njegov proboj film bio je epski mač i mrak, Konan Varvarin 1982. godine, udarac kutije koji je rezultirao nastavkom. [3] Godine 1984. pojavio se u naslovnoj ulozi kritičkog i komercijalno uspešnog naučno-fantastičnog triler filma "The Terminator" Džejmsa Kamerona. Terminator 2: Judgment Dai (1991), Terminator 3: Rise of the Machines (2003) i Terminator Genisis (2015). [3] [4] [5] Pojavio se u brojnim drugim uspešnim filmovima kao što su Commando (1985), The Running Man (1987), Predator (1987), Tvins (1988), Total Recall (1990), Kindergarten Cop (1990) i True Lies (1994).</p>
                     </div>
                 </div>
 
