--- a/html_actors/kate-winslet-sr.html
+++ b/html_actors/kate-winslet-sr.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Kate Winslet</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +33,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
+        <a href="kate-winslet.html" id="language" class="ml-auto mr-1">
             <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
             <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
         </a>
@@ -106,7 +106,7 @@
                         <li class="breadcrumb-item">
                             <a href="../glumci.html">Glumci</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Kate Winslet</li>
                     </ol>
                 </nav>
 
@@ -119,33 +119,30 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Kate_Winslet.jpg" alt="Kate Winslet" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <b> Ime i prezime: </b> Kate Winslet
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Datum rođenja: </b> Oktobar 5, 1975 (age 42)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> Mesto rođenja: </b> Riding, Berksir, Engleska
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Aktivno glumi: </b> 1991 - sada
                         <br/>
                         <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+						<a href="../html_films/titanic-sr.html"> Titanic </a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
                         <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
+                        <p>Kate Elizabeth Vinslet, CBE (rođena 5. oktobra 1975.) je engleska glumica. Pojavila se u brojnim periodima dramskih i tragedija, a često se privlači da prikazuje žene koje su "uznemirile". Vinslet je dobitnik nekoliko priznanja, uključujući i tri nagrade British Academi Avards, i jedan je od retkih izvođača koji su osvojili Akademiju, Emmi i nagrade Grammi.
 						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
+						<p>Rođena u Čitingu, Berkshire, Vinslet je studirao dramu u Teatralnoj školi Redroofs. Prvi izgled filma, u dobi od 15 godina, bio je u britanskoj televizijskoj seriji Dark Season (1991). Napravila je svoj debi na filmu koja je igrala tinejdžersku ubojicu u nebesnim stvorenjima (1994) i dobila je svoju prvu BAFTA nagradu za igru Marianne Dashvood u Sense and Sensibiliti (1995). Globalni stardom je ubrzo potom vodio ulogu u epski romansu Titanic (1997). To je bio najveći film svih vremena do te tačke, nakon čega je izbjegavao dijelove u blokbasterima u korist kritično priznatih, ali malo vidljivih perioda, uključujući Kuills (2000) i Iris (2001). [5]
 						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
-						</p>
+						<p>Naučna fikcionistička romansa Večno sunce bezobzirnog uma (2004), u kojoj je Vinslet bačena prema vrsti u savremenoj atmosferi, pokazala se kao prekretnica u njenoj karijeri i dobila je još jedno priznanje za svoje nastupe u Findingu Neverlandu (2004) , Little Children (2006), Revolucionarni put (2008) i The Reader (2008). Za igru zaštitnika nacističkog logora u poslednjem od njih, osvojila je nagradu BAFTA i Oskara za najbolju glumicu. U 2010-oj, Vinslet je igrao samohranu majku u 1930-tim Americi u miniseries Mildred Pierce (2011), pridružila se Divergent filmskoj seriji i predstavila Joanna Hoffman u Steve Jobs (2015). Osvojila je nagradu Primetime Emmi za prvu i treću BAFTA nagradu za drugu.</p>
                     </div>
                 </div>
 
