--- a/html_actors/sylvester-stallone.html
+++ b/html_actors/sylvester-stallone.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Sylvester Stallone</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,16 +26,16 @@
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
         <div class="navbar-brand">
-            <a href="../pocetna.html" class="d-none d-md-inline">
+            <a href="../index.html" class="d-none d-md-inline">
                 <img src="../images/logo.png">
             </a>
-            <a href="../pocetna.html">
+            <a href="../index.html">
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
-            <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+        <a href="sylvester-stallone-sr.html" id="language" class="ml-auto mr-1">
+            <img src="../images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="../images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -49,42 +49,42 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../pocetna.html">Početna</a>
+                        <a class="nav-link h4" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Info</span>
-                            <a href="../informacije.html" class="nav-link h4 d-none d-md-block">Info</a>
+                            <a href="../info.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../o-festivalu.html">O festivalu</a>
-                            <a class="dropdown-item h6 rounded" href="../ziri.html">Žiri</a>
-                            <a class="dropdown-item h6 rounded" href="../nagrade.html">Nagrade</a>
-                            <a class="dropdown-item h6 rounded" href="../sponzori.html">Sponzori</a>
-                            <a class="dropdown-item h6 rounded" href="../kontakt.html">Kontakt</a>
+                            <a class="dropdown-item h6 rounded" href="../about.html">About</a>
+                            <a class="dropdown-item h6 rounded" href="../jury.html">Jury</a>
+                            <a class="dropdown-item h6 rounded" href="../awards.html">Awards</a>
+                            <a class="dropdown-item h6 rounded" href="../sponsors.html">Sponsors</a>
+                            <a class="dropdown-item h6 rounded" href="../contact.html">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="nav-link h4 d-md-none">Repertoar</span>
-                            <a href="../repertoar.html" class="nav-link h4 d-none d-md-block">Repertoar</a>
+                            <span class="nav-link h4 d-md-none">Repertoire</span>
+                            <a href="../repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../filmovi.html">Filmovi</a>
-                            <a class="dropdown-item h6 rounded" href="../mesta-projekcija.html">Mesta projekcija</a>
-                            <a class="dropdown-item h6 rounded" href="../karte.html">Karte</a>
+                            <a class="dropdown-item h6 rounded" href="../films.html">Films</a>
+                            <a class="dropdown-item h6 rounded" href="../showings.html">Showings</a>
+                            <a class="dropdown-item h6 rounded" href="../tickets.html">Tickets</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../glumci.html">Glumci</a>
+                        <a class="nav-link h4" href="../actors.html">Actors</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../vesti.html">Vesti</a>
+                        <a class="nav-link h4" href="../news.html">News</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../omiljeno.html">Omiljeno</a>
+                        <a class="nav-link h4" href="../favourites.html">Favourites</a>
                     </li>
                 </ul>
             </div>
@@ -99,14 +99,14 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-light-blue">
                         <li class="breadcrumb-item">
-                            <a href="../pocetna.html">
+                            <a href="../index.html">
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="../glumci.html">Glumci</a>
+                            <a href="../actors.html">Actors</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Sylvester Stallone</li>
                     </ol>
                 </nav>
 
@@ -119,32 +119,34 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Sylvester_Stallone.jpg" alt="Sylvester Stallone" />
                     </div>
                     <div class="col-md-8 media-body">
-                        <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <h4 class="mt-3 text-blue"> General information </h4>
+                        <b> Name: </b> Sylvester Stallone
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Date of birth: </b> 	July 6, 1946 (age 71)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> City of birth: </b> New York City, New York, U.S.
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Years active: </b> 1969 – present
                         <br/>
-                        <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+                        <b> Films: </b>
+                        <a href="../html_films/rocky.html">Rocky</a>,
+						<a href="../html_films/creed.html">Creed</a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
-                        <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
-						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
-						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
+                        <h4 class="text-blue"> Short biography </h4>
+                        <p>
+                            Michael Sylvester Gardenzio Stallone[2][3] (/stəˈloʊn/; born July 6, 1946)[4] is an American actor and filmmaker. He is well known for his Hollywood action roles, including boxer Rocky Balboa in the Rocky series' seven films from 1976 to 2015; soldier John Rambo in the four Rambo films, released between 1982 and 2008; and Barney Ross in the three The Expendables films from 2010 to 2014. Stallone wrote or co-wrote most of the 14 films in all three franchises, and directed many of the films.
+                        </p>
+                        <p>
+                            Stallone's film Rocky was inducted into the National Film Registry, and had its props placed in the Smithsonian Museum. His use of the front entrance to the Philadelphia Museum of Art in the Rocky series led the area to be nicknamed the Rocky Steps, and Philadelphia has a statue of his Rocky character placed permanently near the museum. It was announced on December 7, 2010 that Stallone was voted into the International Boxing Hall of Fame in the non-participant category.[5]
+                        </p>
+                        <p>
+                            In 1977, Stallone was nominated for two Academy Awards for Rocky, Best Original Screenplay and Best Actor. He became the third man in history to receive these two nominations for the same film, after Charlie Chaplin and Orson Welles.[6] Stallone received positive reviews, as well as his first Golden Globe Award win and a third Academy Award nomination, for reprising the role of Rocky Balboa in Ryan Coogler's 2015 film Creed.
 						</p>
                     </div>
                 </div>
@@ -171,10 +173,10 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
-                <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
+                <p class="m-0">Department of Software Engineering, Faculty of Electrical Engineering, University of Belgrade</p>
             </div>
 
         </div>
