--- a/glumci.html
+++ b/glumci.html
@@ -154,12 +154,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Leonardo DiCaprio </h3>
-                        <p>Leonardo Wilhelm DiCaprio (/dɪˈkæprioʊ/; born November 11, 1974) is an American actor, film producer,
-                            and environmental activist.[2] DiCaprio began his career by appearing in television commercials
-                            in the late 1980s. He next had recurring roles in various television series, such as the soap
-                            opera Santa Barbara and the sitcom Growing Pains. He debuted in his film career by starring as
-                            Josh in Critters 3 (1991). He starred in the film adaptation of the memoir This Boy's Life (1993),
-                            and was...</p>
+                        <p>Leonardo Vilhelm DiCaprio (/ dɪkæprioʊ /; rođen 11. novembra 1974.) je američki glumac, filmski producent i aktivista za zaštitu životne sredine. [2] DiCaprio je započeo svoju karijeru pojavljivanjem u televizijskim reklamama krajem 1980-ih. Zatim je imao ponavljajuće uloge u različitim televizijskim...</p>
                         <a class="btn btn-blue" href="html_actors/leonardo-dicaprio-sr.html" role="button"> Nastavi sa čitanjem </a>
                     </div>
                 </div>
@@ -171,12 +166,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Emma Watson </h3>
-                        <p>Emma Charlotte Duerre Watson (born 15 April 1990)[4] is a British actress, model, and activist. Born
-                            in Paris and brought up in Oxfordshire, Watson attended the Dragon School and trained as an actress
-                            at the Oxford branch of Stagecoach Theatre Arts. She rose to prominence after landing her first
-                            professional acting role as Hermione Granger in the Harry Potter film series, having acted only
-                            in school plays previously.[5] Watson appeared in all eight Harry Potter films from 2001 to 2011,
-                            earning...
+                        <p>Emma Charlotte Duerre Vatson (rođena 15. aprila 1990) [4] je engleska glumica, model i aktivista. Rođena u Parizu i odrastao u Oksfordširu, Votson je pohađala Školu zmajeva i obučavala se kao glumica u oksfordskom odeljenju Stagecoach Theatre Arts. Ona se uveličala nakon što je u filmu Harri Potter započela svoju prvu profesionalnu glumačku ulogu kao Hermiona Granger, koja je prethodno delovala samo u školskim predstavama. [5] Votson se pojavila u svih...
                         </p>
                         <a class="btn btn-blue" href="html_actors/emma-watson-sr.html"> Nastavi sa čitanjem </a>
                     </div>
