--- a/glumci2.html
+++ b/glumci2.html
@@ -123,12 +123,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Harrison Ford </h3>
-                        <p>Harrison Ford (born July 13, 1942) is an American actor and film producer. He gained worldwide fame
-                            for his starring roles as Han Solo in the Star Wars film series and as the title character of
-                            the Indiana Jones film series. Ford is also known for playing Rick Deckard in the neo-noir dystopian
-                            science fiction film Blade Runner (1982) and its sequel Blade Runner 2049 (2017); John Book in
-                            the thriller Witness (1985), for which he was nominated for the Academy Award for Best Actor;
-                            and...
+                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran...
                         </p>
                         <a class="btn btn-blue" href="html_actors/harrison-ford-sr.html"> Continue reading </a>
                     </div>
@@ -141,12 +136,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Sylvester Stallone </h3>
-                        <p>Michael Sylvester Gardenzio Stallone[2][3] (/stəˈloʊn/; born July 6, 1946)[4] is an American actor
-                            and filmmaker. He is well known for his Hollywood action roles, including boxer Rocky Balboa
-                            in the Rocky series' seven films from 1976 to 2015; soldier John Rambo in the four Rambo films,
-                            released between 1982 and 2008; and Barney Ross in the three The Expendables films from 2010
-                            to 2014. Stallone wrote or co-wrote most of the 14 films in all three franchises, and directed
-                            ...
+                        <p>Michael Silvester Gardenzio Stallone [2] [3] (/ stəloʊn /; rođen 6. jula 1946) je američki glumac i filmski stvaralac. Poznat je po svojim holivudskim akcionim ulogama, uključujući boksera Rocki Balboa u seriji "Rocki" serije od 1976. do 2015. godine; vojnik Džon Rambo u četiri Rambo filma, izdat između 1982. i 2008. godine; i Barnei Ross u tri filma The Ekpendables od 2010. do 2014. Stallone je napisao ili kopirao većinu od...
                         </p>
                         <a class="btn btn-blue" href="html_actors/sylvester-stallone-sr.html"> Continue reading </a>
                     </div>
@@ -158,12 +148,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Kate Winslet </h3>
-                        <p>Kate Elizabeth Winslet, CBE (born 5 October 1975) is an English actress. She has appeared in numerous
-                            period dramas and tragedies, and is often drawn to portraying "angst-ridden" women. Winslet is
-                            the recipient of several accolades, including three British Academy Film Awards, and is among
-                            the few performers to have won Academy, Emmy, and Grammy Awards. Born in Reading, Berkshire,
-                            Winslet studied drama at the Redroofs Theatre School. Her first screen appearance, at the age
-                            of 15, was in the British...</p>
+                        <p>Kate Elizabeth Vinslet, CBE (rođena 5. oktobra 1975.) je engleska glumica. Pojavila se u brojnim periodima dramskih i tragedija, a često se privlači da prikazuje žene koje su "uznemirile". Vinslet je dobitnik nekoliko priznanja, uključujući i tri nagrade British...</p>
                         <a class="btn btn-blue" href="html_actors/kate-winslet-sr.html" role="button"> Continue reading </a>
                     </div>
                 </div>
@@ -175,11 +160,7 @@
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Arnold Schwarzenegger </h3>
-                        <p>Arnold Alois Schwarzenegger (/ˈʃvɑːrtsənɛɡər/;[1][a] German: [ˈaɐ̯nɔlt ˈʃvaɐ̯tsn̩ˌʔɛɡɐ]; born July
-                            30, 1947) is an Austrian-American actor, filmmaker, businessman, investor, author, philanthropist,
-                            activist, politician, and former professional bodybuilder. He served two terms as the 38th Governor
-                            of California from 2003 to 2011. Schwarzenegger began weight training at the age of 15. He won
-                            the Mr. Universe title at age 20 and went on to win the Mr. Olympia contest seven times, remaining...
+                        <p>Arnold Alois Schvarzenegger (/ ʃvɑːrtsənɛɡər /; [1] [aɐnɔlt ʃvaɐtsnˌʔɛɡɐ], rođen 30. jula 1947. godine) je austrijsko-američki glumac, filmadžer, biznismen, investitor, autor, filantrop, aktivista, političar i bivši profesionalni bodibuilder. Od 2003. do 2011. godine služio...
                         </p>
 
                         <a class="btn btn-blue" href="html_actors/arnold-schwarzenegger-sr.html"> Continue reading </a>
