--- a/html_actors/arnold-schwarzenegger.html
+++ b/html_actors/arnold-schwarzenegger.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Arnold Schwarzenegger</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,16 +26,16 @@
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
         <div class="navbar-brand">
-            <a href="../pocetna.html" class="d-none d-md-inline">
+            <a href="../index.html" class="d-none d-md-inline">
                 <img src="../images/logo.png">
             </a>
-            <a href="../pocetna.html">
+            <a href="../index.html">
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
-            <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+        <a href="arnold-schwarzenegger-sr.html" id="language" class="ml-auto mr-1">
+            <img src="../images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="../images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -49,42 +49,42 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../pocetna.html">Početna</a>
+                        <a class="nav-link h4" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Info</span>
-                            <a href="../informacije.html" class="nav-link h4 d-none d-md-block">Info</a>
+                            <a href="../info.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../o-festivalu.html">O festivalu</a>
-                            <a class="dropdown-item h6 rounded" href="../ziri.html">Žiri</a>
-                            <a class="dropdown-item h6 rounded" href="../nagrade.html">Nagrade</a>
-                            <a class="dropdown-item h6 rounded" href="../sponzori.html">Sponzori</a>
-                            <a class="dropdown-item h6 rounded" href="../kontakt.html">Kontakt</a>
+                            <a class="dropdown-item h6 rounded" href="../about.html">About</a>
+                            <a class="dropdown-item h6 rounded" href="../jury.html">Jury</a>
+                            <a class="dropdown-item h6 rounded" href="../awards.html">Awards</a>
+                            <a class="dropdown-item h6 rounded" href="../sponsors.html">Sponsors</a>
+                            <a class="dropdown-item h6 rounded" href="../contact.html">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="nav-link h4 d-md-none">Repertoar</span>
-                            <a href="../repertoar.html" class="nav-link h4 d-none d-md-block">Repertoar</a>
+                            <span class="nav-link h4 d-md-none">Repertoire</span>
+                            <a href="../repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../filmovi.html">Filmovi</a>
-                            <a class="dropdown-item h6 rounded" href="../mesta-projekcija.html">Mesta projekcija</a>
-                            <a class="dropdown-item h6 rounded" href="../karte.html">Karte</a>
+                            <a class="dropdown-item h6 rounded" href="../films.html">Films</a>
+                            <a class="dropdown-item h6 rounded" href="../showings.html">Showings</a>
+                            <a class="dropdown-item h6 rounded" href="../tickets.html">Tickets</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../glumci.html">Glumci</a>
+                        <a class="nav-link h4" href="../actors.html">Actors</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../vesti.html">Vesti</a>
+                        <a class="nav-link h4" href="../news.html">News</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../omiljeno.html">Omiljeno</a>
+                        <a class="nav-link h4" href="../favourites.html">Favourites</a>
                     </li>
                 </ul>
             </div>
@@ -99,14 +99,14 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-light-blue">
                         <li class="breadcrumb-item">
-                            <a href="../pocetna.html">
+                            <a href="../index.html">
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="../glumci.html">Glumci</a>
+                            <a href="../actors.html">Actors</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Arnold Schwarzenegger</li>
                     </ol>
                 </nav>
 
@@ -119,32 +119,30 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Arnold_Schwarzenegger.jpg" alt="Arnold Schwarzenegger" />
                     </div>
                     <div class="col-md-8 media-body">
-                        <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <h4 class="mt-3 text-blue"> General information </h4>
+                        <b> Name: </b> Arnold Schwarzenegger
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Date of birth: </b> 	July 30, 1947 (age 70)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> City of birth: </b> Thal, Styria, Austria
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Years active: </b> 1970 – present
                         <br/>
-                        <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+                        <b> Films: </b>
+                        <a href="../html_films/terminator.html">Terminator</a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
-                        <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
-						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
-						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
+                        <h4 class="text-blue"> Short biography </h4>
+                        <p>Arnold Alois Schwarzenegger (/ˈʃvɑːrtsənɛɡər/;[1][a] German: [ˈaɐ̯nɔlt ˈʃvaɐ̯tsn̩ˌʔɛɡɐ]; born July 30, 1947) is an Austrian-American actor, filmmaker, businessman, investor, author, philanthropist, activist, politician, and former professional bodybuilder. He served two terms as the 38th Governor of California from 2003 to 2011.</p>
+                        <p>
+                           Schwarzenegger began weight training at the age of 15. He won the Mr. Universe title at age 20 and went on to win the Mr. Olympia contest seven times, remaining a prominent presence in bodybuilding and writing many books and articles on the sport. The Arnold Sports Festival, considered one of the best professional bodybuilding competitions in recent years, is named after him. He is widely considered to be one of the greatest bodybuilders of all time as well as that sport's most charismatic ambassador.[2]
+                        </p>
+                        <p>Schwarzenegger gained worldwide fame as a Hollywood action-film icon. His breakthrough film was the sword-and-sorcery epic Conan the Barbarian in 1982, a box-office hit that resulted in a sequel.[3] In 1984, he appeared in the title role of James Cameron's critically and commercially successful science-fiction thriller film The Terminator. He subsequently reprised the Terminator character in the franchise's later installments: Terminator 2: Judgment Day (1991), Terminator 3: Rise of the Machines (2003), and Terminator Genisys (2015).[3][4][5] He has appeared in a number of other successful films, such as Commando (1985), The Running Man (1987), Predator (1987), Twins (1988), Total Recall (1990), Kindergarten Cop (1990), and True Lies (1994).
 						</p>
                     </div>
                 </div>
@@ -171,10 +169,10 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
-                <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
+                <p class="m-0">Department of Software Engineering, Faculty of Electrical Engineering, University of Belgrade</p>
             </div>
 
         </div>
