--- a/html_actors/kate-winslet.html
+++ b/html_actors/kate-winslet.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Kate Winslet</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,16 +26,16 @@
     <!-- ============== FILM FESTIVAL NAVBAR ================ -->
     <nav class="navbar navbar-expand-md navbar-light bg-blue">
         <div class="navbar-brand">
-            <a href="../pocetna.html" class="d-none d-md-inline">
+            <a href="../index.html" class="d-none d-md-inline">
                 <img src="../images/logo.png">
             </a>
-            <a href="../pocetna.html">
+            <a href="../index.html">
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
-            <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
-            <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
+        <a href="kate-winslet-sr.html" id="language" class="ml-auto mr-1">
+            <img src="../images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
+            <img src="../images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -49,42 +49,42 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-pills mx-auto text-blue text-uppercase">
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../pocetna.html">Početna</a>
+                        <a class="nav-link h4" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="nav-link h4 d-md-none">Info</span>
-                            <a href="../informacije.html" class="nav-link h4 d-none d-md-block">Info</a>
+                            <a href="../info.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../o-festivalu.html">O festivalu</a>
-                            <a class="dropdown-item h6 rounded" href="../ziri.html">Žiri</a>
-                            <a class="dropdown-item h6 rounded" href="../nagrade.html">Nagrade</a>
-                            <a class="dropdown-item h6 rounded" href="../sponzori.html">Sponzori</a>
-                            <a class="dropdown-item h6 rounded" href="../kontakt.html">Kontakt</a>
+                            <a class="dropdown-item h6 rounded" href="../about.html">About</a>
+                            <a class="dropdown-item h6 rounded" href="../jury.html">Jury</a>
+                            <a class="dropdown-item h6 rounded" href="../awards.html">Awards</a>
+                            <a class="dropdown-item h6 rounded" href="../sponsors.html">Sponsors</a>
+                            <a class="dropdown-item h6 rounded" href="../contact.html">Contact</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="nav-link h4 d-md-none">Repertoar</span>
-                            <a href="../repertoar.html" class="nav-link h4 d-none d-md-block">Repertoar</a>
+                            <span class="nav-link h4 d-md-none">Repertoire</span>
+                            <a href="../repertoire.html" class="nav-link h4 d-none d-md-block">Repertoire</a>
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item h6 rounded" href="../filmovi.html">Filmovi</a>
-                            <a class="dropdown-item h6 rounded" href="../mesta-projekcija.html">Mesta projekcija</a>
-                            <a class="dropdown-item h6 rounded" href="../karte.html">Karte</a>
+                            <a class="dropdown-item h6 rounded" href="../films.html">Films</a>
+                            <a class="dropdown-item h6 rounded" href="../showings.html">Showings</a>
+                            <a class="dropdown-item h6 rounded" href="../tickets.html">Tickets</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../glumci.html">Glumci</a>
+                        <a class="nav-link h4" href="../actors.html">Actors</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../vesti.html">Vesti</a>
+                        <a class="nav-link h4" href="../news.html">News</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link h4" href="../omiljeno.html">Omiljeno</a>
+                        <a class="nav-link h4" href="../favourites.html">Favourites</a>
                     </li>
                 </ul>
             </div>
@@ -99,14 +99,14 @@
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-light-blue">
                         <li class="breadcrumb-item">
-                            <a href="../pocetna.html">
+                            <a href="../index.html">
                                 <i class="fa fa-home"></i>
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="../glumci.html">Glumci</a>
+                            <a href="../actors.html">Actors</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Kate Winslet</li>
                     </ol>
                 </nav>
 
@@ -119,32 +119,32 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Kate_Winslet.jpg" alt="Kate Winslet" />
                     </div>
                     <div class="col-md-8 media-body">
-                        <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <h4 class="mt-3 text-blue"> General information </h4>
+                        <b> Name: </b> Kate Winslet
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Date of birth: </b> 	5 October 1975 (age 42)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> City of birth: </b> Reading, Berkshire, England
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Years active: </b> 1991 – present
                         <br/>
-                        <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+                        <b> Films: </b>
+                        <a href="../html_films/titanic.html">Titanic</a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
-                        <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
-						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
-						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
+                        <h4 class="text-blue"> Short biography </h4>
+                        <p>Kate Elizabeth Winslet, CBE (born 5 October 1975) is an English actress. She has appeared in numerous period dramas and tragedies, and is often drawn to portraying "angst-ridden" women. Winslet is the recipient of several accolades, including three British Academy Film Awards, and is among the few performers to have won Academy, Emmy, and Grammy Awards.
+                        </p>
+                        <p>
+                            Born in Reading, Berkshire, Winslet studied drama at the Redroofs Theatre School. Her first screen appearance, at the age of 15, was in the British television series Dark Season (1991). She made her film debut playing a teenage murderess in Heavenly Creatures (1994), and received her first BAFTA Award for playing Marianne Dashwood in Sense and Sensibility (1995). Global stardom followed soon after with her leading role in the epic romance Titanic (1997). It was the highest-grossing film of all time to that point, after which she eschewed parts in blockbusters in favour of critically acclaimed but little-seen period pieces, including Quills (2000) and Iris (2001).
+                        </p>
+                        <p>
+                            The science fiction romance Eternal Sunshine of the Spotless Mind (2004), in which Winslet was cast against type in a contemporary setting, proved to be a turning point in her career, and she gained further recognition for her performances in Finding Neverland (2004), Little Children (2006), Revolutionary Road (2008), and The Reader (2008). For playing a Nazi camp guard in the last of these, she won the BAFTA Award and Academy Award for Best Actress. In the 2010s, Winslet played a single mother in 1930s America in the miniseries Mildred Pierce (2011), joined the Divergent film series, and portrayed Joanna Hoffman in Steve Jobs (2015). She won a Primetime Emmy Award for the former and a third BAFTA Award for the latter.
 						</p>
                     </div>
                 </div>
@@ -171,10 +171,10 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
-                <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
+                <p class="m-0">Department of Software Engineering, Faculty of Electrical Engineering, University of Belgrade</p>
             </div>
 
         </div>
