--- a/html_actors/sylvester-stallone-sr.html
+++ b/html_actors/sylvester-stallone-sr.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Harrison Ford</title>
+    <title>Sylvester Stallone</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,7 +33,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="harrison-ford.html" id="language" class="ml-auto mr-1">
+        <a href="sylvester-stallone.html" id="language" class="ml-auto mr-1">
             <img src="../images/eng_flag_48.png" alt="english-language" class="mr-auto d-none d-sm-block">
             <img src="../images/eng_flag_32.png" alt="english-language" class="mr-auto d-sm-none">
         </a>
@@ -106,7 +106,7 @@
                         <li class="breadcrumb-item">
                             <a href="../glumci.html">Glumci</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Harrison Ford</li>
+                        <li class="breadcrumb-item active" aria-current="page">Sylvester Stallone</li>
                     </ol>
                 </nav>
 
@@ -119,33 +119,31 @@
             <div class="col-md-10" id="actor">
                 <div class="row media">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="../images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid" src="../images/actors/Sylvester_Stallone.jpg" alt="Sylvester Stallone" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h4 class="mt-3 text-blue"> Generalne informacije </h4>
-                        <b> Ime i prezime: </b> Harrison Ford
+                        <b> Ime i prezime: </b> Sylvester Stallone
                         <br/>
-                        <b> Datum rođenja: </b> Jul 13, 1942 (age 75)
+                        <b> Datum rođenja: </b> Jul 6, 1946 (age 71)
                         <br/>
-                        <b> Mesto rođenja: </b> Chicago, Illinois, SAD
+                        <b> Mesto rođenja: </b> Nju Jork Siti, Nju Jork, SAD
                         <br/>
-                        <b> Aktivno glumi: </b> 1966 - sada
+                        <b> Aktivno glumi: </b> 1969 - sada
                         <br/>
                         <b> Filmovi: </b>
-                        <a href="../html_films/bladerunner2049-sr.html">Blade Runner 2049</a>
+						<a href="../html_films/rocky-sr.html"> Rocky </a>
+                        <a href="../html_films/creed-sr.html">Creed</a>
                     </div>
                 </div>
                 <div class="row mt-4">
                     <div class="col">
                         <h4 class="text-blue"> Kratka biografija </h4>
-                        <p>Harrison Ford (rođen 13. jula 1942.) je američki glumac i filmski producent. Dobio je svetsku slavu za svoje glumačke uloge kao Han Solo u filmu serije Star Vars i kao naslovni lik filmske serije Indiana Jonesa. Ford je poznat po tome što je igrao Rika Deckarda u neo-noirskoj distopijskoj naučnoj fantastičnoj filmu Blade Runner (1982) i njegovom nastavku Blade Runner 2049 (2017); John Book u trileru Svedok (1985), za koji je nominiran za Oskara za najbolju glumicu; i Jack Rian u akcionim filmovima Patriot Games (1992) i Clear and Present Danger (1994).
+                        <p>Michael Silvester Gardenzio Stallone [2] [3] (/ stəloʊn /; rođen 6. jula 1946) je američki glumac i filmski stvaralac. Poznat je po svojim holivudskim akcionim ulogama, uključujući boksera Rocki Balboa u seriji "Rocki" serije od 1976. do 2015. godine; vojnik Džon Rambo u četiri Rambo filma, izdat između 1982. i 2008. godine; i Barnei Ross u tri filma The Ekpendables od 2010. do 2014. Stallone je napisao ili kopirao većinu od 14 filmova u sva tri franšiza i režirao mnoge od filmova.
 						</p>
-						<p>Njegova karijera obuhvata šest decenija i uključuje uloge u nekoliko holivudskih blokbastera; uključujući epski ratni film Apokalipse Nov (1979); pravna drama Pretpostavljeni Innocent (1990); akcioni film The Fugitive (1993); politički akcioni triler Air Force One (1997); i psihološki triler Vhat Lies Beneath (2000). Sedam njegovih filmova uvedeno je u Nacionalni filmski registar: American Graffiti (1973), The Conversation (1974), Star Vars (1977), Apocalipse Nov (1979), The Empire Strikes Back (1980), Raiders of the Lost Ark (1981) i Blade Runner (1982).
+						<p>Stalonov film Rocki je uveden u Nacionalni filmski registar, a njegovi rekviziti su stavljeni u muzej Smithsonian. Njegova upotreba prednjeg ulaza u Filadelfijski muzej umjetnosti u Rocki seriji dovela je do podrucja nazvanog Rocki Steps, a Philadelphia ima statuu njegovog kamenog karaktera koji se stalno postavlja u blizini muzeja. Objavljeno je 7. decembra 2010. godine da je Stallone proglašen za Međunarodnu boksersku dvoranu slavnih u kategoriji koja nije učestvovala. [5]
 						</p>
-						<p>Od 2016. godine, američka kućna kancelarija porasla je od Fordovih filmova od preko 4,7 milijardi dolara, a svjetski porijeklo je premašio 6 milijardi dolara, čineći Ford drugom najvećom američkom zvezdanom kutijom. [1] [2]
-						</p>
-						<p>Ford je oženjen za glumicu Calisto Flockhart.
-						</p>
+						<p>Godine 1977. Stallone je nominovan za dve nagrade Oskara za Rocki, najbolji originalni scenario i najbolji glumac. On je postao treći čovek u istoriji koji je dobio ove dve nominacije za isti film, nakon Charlie Chaplin i Orson Velles. [6] Stallone je dobio pozitivne kritike, kao i njegovu prvu pobedu u Zlatnom globusu i treću nominaciju za Oskara nagrade, jer je predstavio ulogu Rocki Balboa u filmu Rijana Cooglera za film "Creed" od 2015. godine.</p>
                     </div>
                 </div>
 
