--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
                         <li class="breadcrumb-item">
                             <a href="info.html">Info</a>
                         </li>
-                        <li class="breadcrumb-item active" aria-current="page">Jury</li>
+                        <li class="breadcrumb-item active" aria-current="page">Contact</li>
                     </ol>
                 </nav>
 
@@ -171,14 +171,6 @@
 
 
             <!-- ============== BANNER ================ -->
-            <div class="col-md-2">
-                <a href="" class="d-none d-md-block">
-                    <img src="images/banner.jpg" alt="banner" class="w-100 pb-2">
-                </a>
-                <a href="" class="d-md-none pt-5">
-                    <img src="images/banner-small.JPG" alt="banner" class="w-100 py-5">
-                </a>
-            </div>
 
             <div class="col-md-2">
                 <a href="" class="d-none d-md-block">
