--- a/informacije.html
+++ b/informacije.html
@@ -132,8 +132,8 @@
 
                 <h4 class="text-blue">O festivalu</h4>
                 <p>
-                    Saznajte više o
-                    <a href="o-festivalu.html">festivalu</a>
+                    Saznajte više
+                    <a href="o-festivalu.html"> o festivalu</a>
                 </p>
                 <h4 class="text-blue">Žiri</h4>
                 <p>
