--- a/kontakt.html
+++ b/kontakt.html
@@ -188,7 +188,7 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
