--- a/nagrade.html
+++ b/nagrade.html
@@ -130,7 +130,7 @@
             </nav>
             <!-- ============== MAIN CONTENT ================ -->
             <div class="col-md-7 col-lg-8">
-                <h2 class="text-blue">NAGRADE ŽIRIJA GLAVNOG TAKMIČARSKOG PROGRAMA</h2>
+                <h2 class="text-blue">Nagrade žirija glavnog takmičarskog programa</h2>
                 <ul>
                     <li>&nbsp; &nbsp; Nagrada &bdquo;Beogradski pobednik&ldquo; za najbolji film - dodeljuje se producentu&nbsp;</li>
                     <li>&nbsp; &nbsp; Specijalna Nagrada žirija&nbsp;</li>
