--- a/o-festivalu.html
+++ b/o-festivalu.html
@@ -107,7 +107,7 @@
                             </a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="informacije.html">Informacije</a>
+                            <a href="informacije.html">Info</a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page">O festivalu</li>
                     </ol>
