--- a/sponzori.html
+++ b/sponzori.html
@@ -133,7 +133,7 @@
             <div class="col-md-7 col-lg-8">
                 <div class="row mb-2">
                     <div class="col-12">
-                        <h2 class="text-blue">Uz posebn zahvalnost</h2>
+                        <h2 class="text-blue m-0">Uz posebnu zahvalnost</h2>
                     </div>
                     <div class="col-12">
                         <a href="http://www.lukoil.rs">
