--- a/ziri.html
+++ b/ziri.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Ziri</title>
+    <title>Žiri</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -226,7 +226,7 @@
                 <a href="" class="d-none d-md-block">
                     <img src="images/banner2.jpg" alt="banner" class="w-100 py-2">
                 </a>
-                <a href="" class="d-none d-md-block d-lg-none d-xl-block">
+                <a href="" class="d-none d-md-block">
                     <img src="images/banner3.jpg" alt="banner" class="w-100 py-2">
                 </a>
                 <a href="" class="d-md-none">
@@ -242,7 +242,7 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0"> Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
