--- a/actors2.html
+++ b/actors2.html
@@ -121,7 +121,7 @@
             <div class="col-md-10" id="main_actors">
                 <div class="row media mb-5">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Harrison_Ford.jpg" alt="Harrison Ford" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Harrison Ford </h3>
@@ -139,7 +139,7 @@
                 <div class="row media mb-5">
 
                     <div class="col-md-4">
-                        <img class="img-fluid" src="images/actors/Sylvester_Stallone.jpg" alt="Sylvester Stallone" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Sylvester_Stallone.jpg" alt="Sylvester Stallone" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Sylvester Stallone </h3>
@@ -156,7 +156,7 @@
 
                 <div class="row media mb-5">
                     <div class="col-md-4">
-                        <img class="img-fluid" src="images/actors/Kate_Winslet.jpg" alt="Kate Winslet" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Kate_Winslet.jpg" alt="Kate Winslet" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Kate Winslet </h3>
@@ -173,7 +173,7 @@
                 <div class="row media mb-5">
 
                     <div class="col-md-4">
-                        <img class="img-fluid" src="images/actors/Arnold_Schwarzenegger.jpg" alt="Arnold Schwarzenegger" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Arnold_Schwarzenegger.jpg" alt="Arnold Schwarzenegger" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4"> Arnold Schwarzenegger </h3>
