--- a/filmovi2.html
+++ b/filmovi2.html
@@ -153,7 +153,7 @@
                             <dd class="col-md-8" id="popularity1"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link1"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link1"> Detalji </a>
                         <button type="button" id="favourite1" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart1"></i>
                         </button>
@@ -225,7 +225,7 @@
                             <dd class="col-md-8" id="popularity2"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link2"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link2"> Detalji </a>
                         <button type="button" id="favourite2" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart2"></i>
                         </button>
@@ -297,7 +297,7 @@
                             <dd class="col-md-8" id="popularity3"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link3"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link3"> Detalji </a>
                         <button type="button" id="favourite3" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart3"></i>
                         </button>
@@ -369,7 +369,7 @@
                             <dd class="col-md-8" id="popularity4"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link4"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link4"> Detalji </a>
                         <button type="button" id="favourite4" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart4"></i>
                         </button>
@@ -459,7 +459,7 @@
         <div class="row">
             <div class="col text-center">
                 <a href="#" class="text-blue">
-                    <i class="fa fa-arrow-up h3 float-right" title="Back to the top"></i>
+                    <i class="fa fa-arrow-up h3 float-right" title="Nazad na vrh"></i>
                 </a>
                 <p class="font-italic m-0">&copy; 2018 Marija Kostić, Stefan Milanović</p>
                 <p class="m-0">Odsek za softversko inženjerstvo Elektrotehničkog fakulteta Univerziteta u Beogradu</p>
