--- a/films2.html
+++ b/films2.html
@@ -34,7 +34,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="filmovi.html" id="language" class="ml-auto mr-1">
+        <a href="filmovi2.html" id="language" class="ml-auto mr-1">
             <img src="images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
             <img src="images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
