--- a/glumci.html
+++ b/glumci.html
@@ -119,7 +119,7 @@
             <div class="col-md-10">
                 <div class="row media mb-5">
                     <div class="col-md-4">
-                        <img class="img-fluid rounded" src="images/actors/Ryan_Gosling.jpg" alt="Ryan Gosling" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Ryan_Gosling.jpg" alt="Ryan Gosling" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Ryan Gosling </h3>
@@ -134,7 +134,7 @@
                 <div class="row media mb-5">
 
                     <div class="col-md-4">
-                        <img class="img-fluid rounded" src="images/actors/Yvonne_Strahovski.jpg" alt="Yvonne Strahovski" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Yvonne_Strahovski.jpg" alt="Yvonne Strahovski" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Yvonne Strahovski </h3>
@@ -150,7 +150,7 @@
 
                 <div class="row media mb-5">
                     <div class="col-md-4">
-                        <img class="img-fluid rounded" src="images/actors/Leonardo_DiCaprio.jpg" alt="Leonardo DiCaprio" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Leonardo_DiCaprio.jpg" alt="Leonardo DiCaprio" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Leonardo DiCaprio </h3>
@@ -167,7 +167,7 @@
                 <div class="row media mb-5">
 
                     <div class="col-md-4">
-                        <img class="img-fluid rounded" src="images/actors/Emma_Watson.jpg" alt="Emma Watson" />
+                        <img class="img-fluid rounded d-block mx-auto" src="images/actors/Emma_Watson.jpg" alt="Emma Watson" />
                     </div>
                     <div class="col-md-8 media-body">
                         <h3 class="mt-4 text-blue"> Emma Watson </h3>
