--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="col">
                         <div class="row">
                             <dv class="col">
-                                <h2 class="text-blue">
+                                <h2 class="text-blue" id="recommendations" >
                                     Recommendations
                                 </h2>
                             </dv>
