Added film html pages (srb) and fixed minor issues

--- a/filmovi.html
+++ b/filmovi.html
@@ -152,7 +152,7 @@
                             <dd class="col-md-8" id="popularity1"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link1"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link1"> Detaljnije </a>
                         <button type="button" id="favourite1" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart1"></i>
                         </button>
@@ -224,7 +224,7 @@
                             <dd class="col-md-8" id="popularity2"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link2"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link2"> Detaljnije </a>
                         <button type="button" id="favourite2" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart2"></i>
                         </button>
@@ -296,7 +296,7 @@
                             <dd class="col-md-8" id="popularity3"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link3"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link3"> Detaljnije </a>
                         <button type="button" id="favourite3" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart3"></i>
                         </button>
@@ -368,7 +368,7 @@
                             <dd class="col-md-8" id="popularity4"> </dd>
                         </dl>
 
-                        <a class="btn btn-outline-blue" href="html_films/" id="link4"> Details </a>
+                        <a class="btn btn-outline-blue" href="html_films/" id="link4"> Detaljnije </a>
                         <button type="button" id="favourite4" class="btn btn-outline-blue ml-4" onclick="">
                             <i class="far fa-heart" id="heart4"></i>
                         </button>
