--- a/html_films/creed.html
+++ b/html_films/creed.html
@@ -36,7 +36,7 @@
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
-        <a href="aftermath-sr.html" id="language" class="ml-auto mr-1">
+        <a href="creed-sr.html" id="language" class="ml-auto mr-1">
             <img src="../images/srb_flag_48.png" alt="serbian-language" class="mr-auto d-none d-sm-block">
             <img src="../images/srb_flag_32.png" alt="serbian-language" class="mr-auto d-sm-none">
         </a>
