--- a/html_films/killerelite-sr.html
+++ b/html_films/killerelite-sr.html
@@ -59,7 +59,7 @@
                             <span class="nav-link h4 d-md-none">Info</span>
                             <a href="../informacije.html" class="nav-link h4 d-none d-md-block">Info</a>
                         </a>
-                        <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu bg-blue m-0" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item h6 rounded" href="../o-festivalu.html">O festivalu</a>
                             <a class="dropdown-item h6 rounded" href="../ziri.html">Žiri</a>
                             <a class="dropdown-item h6 rounded" href="../nagrade.html">Nagrade</a>
@@ -72,7 +72,7 @@
                             <span class="nav-link h4 d-md-none">Repertoar</span>
                             <a href="../repertoar.html" class="nav-link h4 d-none d-md-block">Repertoar</a>
                         </a>
-                        <div class="dropdown-menu bg-blue" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu bg-blue m-0" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item h6 rounded" href="../filmovi.html">Filmovi</a>
                             <a class="dropdown-item h6 rounded" href="../mesta-projekcija.html">Mesta projekcija</a>
                             <a class="dropdown-item h6 rounded" href="../karte.html">Karte</a>
@@ -285,7 +285,7 @@
                                 <option id="o3"></option>
                             </select>
                         </div>
-                        <button type="" class="btn btn-outline-blue mt-3" onclick="checkData(0)"> Rezerviši </button>
+                        <button type="" class="btn btn-outline-blue mt-3" onclick="checkData(4)"> Rezerviši </button>
                     </form>
                 </div>
             </div>
