--- a/pocetna.html
+++ b/pocetna.html
@@ -99,7 +99,7 @@
         <!-- ============== CAROUSEL ================ -->
         <div class="row mt-0 mb-4">
             <div class="col">
-                <div id="carouselId" class="carousel slide" data-ride="carousel">
+                <div id="carouselId" class="carousel slide carousel-fade" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselId" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselId" data-slide-to="1"></li>
