--- a/html_films/titanic.html
+++ b/html_films/titanic.html
@@ -32,7 +32,7 @@
             <a href="../index.html" class="d-none d-md-inline">
                 <img src="../images/logo.png">
             </a>
-            <a href="index.html">
+            <a href="../index.html">
                 <span class="h1 align-middle text-black" id="festival-title">Film Festival 2018</span>
             </a>
         </div>
